.nave{     position: fixed;     top: 0px;     right: 0px;     left: 0px;     margin-top: 0px;     width: 100%;     z-index: 1; }

--- a/styles(2).css
+++ b/styles(2).css
@@ -89,6 +89,15 @@ nav a{
     text-align: center;
     border-radius: 20px;
 }
+.nave{
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    left: 0px;
+    margin-top: 0px;
+    width: 100%;
+    z-index: 1;
+}
 
 nav a:hover{
     background-color: yellow;
